// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddSourceWizard Component should allow cancelling the wizard: cancel 1`] = `
Array [
  Array [
    Object {
      "source": Object {
        "source_type": "network",
      },
      "type": "VALID_SOURCE_WIZARD_STEPONE",
    },
  ],
  Array [
    Object {
      "body": "t(form-dialog.confirmation_body_add-source, {\\"context\\":\\" \\"})",
      "cancelButtonText": "t(form-dialog.label, {\\"context\\":\\"no\\"})",
      "confirmButtonText": "t(form-dialog.label, {\\"context\\":\\"yes\\"})",
      "heading": "t(form-dialog.confirmation_heading_add-source, {\\"context\\":\\"\\"})",
      "onConfirm": [Function],
      "title": "t(form-dialog.confirmation_title_add-source, {\\"context\\":\\"\\"})",
      "type": "CONFIRMATION_MODAL_SHOW",
      "variant": "medium",
    },
  ],
]
`;

exports[`AddSourceWizard Component should allow closing the wizard on fulfillment: fulfill 1`] = `
Array [
  Array [
    Object {
      "source": Object {
        "source_type": "network",
      },
      "type": "VALID_SOURCE_WIZARD_STEPONE",
    },
  ],
  Array [
    Array [
      Object {
        "type": "CONFIRMATION_MODAL_HIDE",
      },
      Object {
        "type": "UPDATE_SOURCE_HIDE",
      },
    ],
  ],
  Array [
    Object {
      "type": "UPDATE_SOURCES",
    },
  ],
]
`;

exports[`AddSourceWizard Component should display update steps: update 1`] = `
<Wizard
  className="quipucords-wizard__add-source"
  isForm={true}
  isNavHidden={false}
  isOpen={true}
  onClose={[Function]}
  onNext={[Function]}
  steps={
    Array [
      Object {
        "canJumpTo": false,
        "component": <Memo(Connect(AddSourceWizardStepTwo)) />,
        "enableNext": false,
        "id": 1,
        "name": "t(form-dialog.title_add-source_step, {\\"context\\":\\"two\\"})",
        "nextButtonText": "t(form-dialog.label_submit, {\\"context\\":\\"add-source\\"})",
      },
      Object {
        "canJumpTo": false,
        "component": <Memo(Connect(AddSourceWizardStepThree)) />,
        "enableNext": false,
        "hideBackButton": false,
        "hideCancelButton": false,
        "id": 2,
        "name": "t(form-dialog.title_add-source_step, {\\"context\\":\\"three\\"})",
        "nextButtonText": "t(form-dialog.label, {\\"context\\":\\"close\\"})",
      },
    ]
  }
  title="t(form-dialog.title_add-source, {\\"context\\":\\"edit\\"})"
  variant="medium"
/>
`;

exports[`AddSourceWizard Component should render a basic component: basic 1`] = `
<Wizard
  className="quipucords-wizard__add-source"
  isForm={true}
  isNavHidden={false}
  isOpen={true}
  onClose={[Function]}
  onNext={[Function]}
  steps={
    Array [
      Object {
        "canJumpTo": false,
        "component": <Memo(Connect(AddSourceWizardStepOne)) />,
        "enableNext": false,
        "id": 1,
        "name": "t(form-dialog.title_add-source, {\\"context\\":\\"step\\"})",
      },
      Object {
        "canJumpTo": false,
        "component": <Memo(Connect(AddSourceWizardStepTwo)) />,
        "enableNext": false,
        "id": 2,
        "name": "t(form-dialog.title_add-source_step, {\\"context\\":\\"two\\"})",
        "nextButtonText": "t(form-dialog.label_submit, {\\"context\\":\\"add-source\\"})",
      },
      Object {
        "canJumpTo": false,
        "component": <Memo(Connect(AddSourceWizardStepThree)) />,
        "enableNext": false,
        "hideBackButton": false,
        "hideCancelButton": false,
        "id": 3,
        "name": "t(form-dialog.title_add-source_step, {\\"context\\":\\"three\\"})",
        "nextButtonText": "t(form-dialog.label, {\\"context\\":\\"close\\"})",
      },
    ]
  }
  title="t(form-dialog.title, {\\"context\\":\\"add-source\\"})"
  variant="medium"
/>
`;
